# Mac_to_Ipad

./: .gitignore  BetterCastSender-Info.plist  CLAUDE.md  LICENSE  Package.swift  README.md  make_app.sh  package_ios_ipa.sh
.github/workflows/: build-linux-receiver.yml  build-windows-receiver.yml
BetterCastIOS.xcodeproj/: project.pbxproj
Sources/BetterCastReceiver/: BetterCastReceiverApp.swift  Constants.swift  InputEvent.swift  LogManager.swift  VideoDecoder.swift  VideoRenderer.swift
Sources/BetterCastReceiverAndroid/: build.gradle.kts  settings.gradle.kts
Sources/BetterCastReceiverAndroid/app/: build.gradle.kts
Sources/BetterCastReceiverAndroid/app/src/main/: AndroidManifest.xml
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/: MainActivity.kt
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/input/: InputEvent.kt  TouchHandler.kt
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/network/: ServiceAdvertiser.kt  ServiceDiscovery.kt  TcpClient.kt  UdpClient.kt
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/sender/: ScreenCaptureService.kt  SenderScreen.kt  SenderViewModel.kt  TcpSender.kt  VideoEncoder.kt
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/ui/: ReceiverScreen.kt
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/ui/theme/: Theme.kt
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/video/: VideoDecoder.kt
Sources/BetterCastReceiverAndroid/app/src/main/java/com/bettercast/receiver/viewmodel/: ReceiverViewModel.kt
Sources/BetterCastReceiverAndroid/app/src/main/res/drawable/: ic_launcher_foreground.xml
Sources/BetterCastReceiverAndroid/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Sources/BetterCastReceiverDesktop/: AdbHelper.cpp  AdbHelper.h  AudioDecoder.cpp  AudioDecoder.h  AudioPlayer.cpp  AudioPlayer.h  BUILD.md  CMakeLists.txt  InputEvent.h  InputHandler.cpp  InputHandler.h  MainWindow.cpp  MainWindow.h  NetworkListener.cpp  NetworkListener.h  ServiceDiscovery.cpp  ServiceDiscovery.h  VideoDecoder.cpp  VideoDecoder.h  VideoRenderer.cpp  VideoRenderer.h  VideoWindow.cpp  VideoWindow.h  installer.nsi  main.cpp  resources.qrc
Sources/BetterCastReceiverDesktop/sender/: NetworkSender.cpp  NetworkSender.h  ScreenCapture.h  ScreenCaptureWin.cpp  ScreenCaptureWin.h  SenderController.cpp  SenderController.h  VideoEncoderFF.cpp  VideoEncoderFF.h  VirtualDisplayVDD.cpp  VirtualDisplayVDD.h
Sources/BetterCastReceiverIOS/: AppDelegate.swift  AudioPlayerIOS.swift  Constants.swift  Info.plist  InputEvent.swift  LaunchScreen.storyboard  LogManager.swift  MinimalViewController.swift  NetworkListenerIOS.swift  VideoDecoder.swift  VideoRendererViewIOS.swift  ViewController.swift  main.swift
Sources/BetterCastSender/: AudioEncoder.swift  BetterCastSender-Bridging-Header.h  BetterCastSenderApp.swift  Constants.swift  InputEvent.swift  InputHandler.swift  LogManager.swift  ProcessAudioTapCapture.swift  ReceiverMode.swift  ReceiverNetworkListener.swift  ReceiverVideoDecoder.swift  ReceiverVideoRenderer.swift  ScreenRecorder.swift  VideoEncoder.swift  VirtualDisplayManager.swift
Sources/BetterCastSender/VirtualDisplay/: VirtualDisplay.h  VirtualDisplay.m
Sources/BetterCastShared/: PairingAuthenticator.swift  PairingSecretStore.swift  PrivateBetterCastConstants.swift
Tests/BetterCastSharedTests/: PairingAuthenticatorTests.swift  PairingSecretStoreTests.swift
assets/branding/: BetterCastIcon.icns
docs/: github-readiness.md
docs/decisions/: ADR-001-private-mac-ipad-authenticated-p2p.md  ADR-002-display-only-local-mac-control.md
docs/release-notes/: v5.md  v6.md  v7.md  v8.md
docs/superpowers/plans/: 2026-05-11-private-mac-ipad-bettercast.md
